code/frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  height: 100vh;
}

@font-face {
  font-family: 'Fira Code';
  src: url('/fonts/FiraCode-Light.woff2') format('woff2');
  font-weight: 300;
  font-display: swap;
}

@font-face {
  font-family: 'Fira Code';
  src: url('/fonts/FiraCode-Regular.woff2') format('woff2');
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: 'Fira Code';
  src: url('/fonts/FiraCode-Medium.woff2') format('woff2');
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: 'Fira Code';
  src: url('/fonts/FiraCode-SemiBold.woff2') format('woff2');
  font-weight: 600;
  font-display: swap;
}

@font-face {
  font-family: 'Fira Code';
  src: url('/fonts/FiraCode-Bold.woff2') format('woff2');
  font-weight: 700;
  font-display: swap;
}

.toast-position {
  top: 5rem !important;
}
/* input:focus, textarea:focus, */
.form-select:focus {
  outline: none !important;
  border-color: transparent !important;
  box-shadow: none !important;
}

table {
  border-collapse: collapse;
  width: 100%;
  margin: 1rem auto;
}

th, td {
  border: 1px solid #333;
  padding: 12px;
}

.form-select, .form-select option {
  width: 100%;
  height: 25px;
  border-radius: 5px;
  border: 1px solid #ccc;
  color: black; /* Set the text color to black */
  background-color: white;

}


.dark .form-select, .dark .form-select option {
  color: white;
  background-color: #374151;
  border: none;
}


.prose img {
  margin-left: auto;
  margin-right: auto;
}

.prose a {
  color: #337ab7;
  text-decoration: none;
}

.prose a:hover {
  text-decoration: underline;
  color: #23527c;
}

.dark .prose a {
  color: #5EB7E0;
}

.prose ul {
  list-style-type: disc !important;
}

.prose ul ul {
  list-style-type: circle !important;
}

.prose ul ul ul {
  list-style-type: square !important;
}

.prose :where(ul):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
  list-style-type: disc !important;
}

.prose ul > li::marker {
  color: black !important;
}

.prose ul ul > li::marker {
  color: gray !important;
}

.prose ul ul ul > li::marker {
  color: black !important;
}

.dark .prose ul > li::marker {
  color: white !important;
}

.dark .prose ul ul > li::marker {
  color: lightgray !important;
}

.dark .prose ul ul ul > li::marker {
  color: white !important;
}

.header-anchor {
  visibility: hidden;
  opacity: 0;
  text-decoration: none !important;
  color: inherit;
  display: inline-flex;
  align-items: center;
  transition: visibility 0.2s, opacity 0.2s;
  color: white !important;
}

h1:hover .header-anchor,
h2:hover .header-anchor,
h3:hover .header-anchor,
h4:hover .header-anchor,
h5:hover .header-anchor,
h6:hover .header-anchor {
  visibility: visible;
  opacity: 1;
}


.prose code.inline-code {
  color: var(--tw-prose-pre-code);
  background-color: var(--tw-prose-pre-bg);
  padding: 0.2em 0.4em;
  border-radius: 3px;
  font-weight: 400;
  font-size: 0.875em;
}

.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before,
.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
  content: "" !important;
}

.prose :where(p > code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before,
.prose :where(p > code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
  content: "" !important;
}

